--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[dependencies.sdl2]
-version = "0.35.2"
-features = ["image", "gfx"]
+sfml = "0.19.0"
